--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     
     testCompile 'junit:junit:4.+'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit-addons:junit-addons:1.4'
     testCompile 'mockit:mockit:0.999.4'
 }
